Fix : Header now fixed on mobile + desktop

--- a/src/assets/css/module/core/_core-footer.scss
+++ b/src/assets/css/module/core/_core-footer.scss
@@ -45,7 +45,7 @@
     .core-header.core-header--mobile ~ & {
       display: inline-flex;
       opacity: 1;
-      position: absolute;
+      position: fixed;
       left: 0;
       right: 0;
       bottom: 0;
