--- a/src/assets/css/tools/_layout.scss
+++ b/src/assets/css/tools/_layout.scss
@@ -28,6 +28,7 @@
   main:not(.signin):not(.signup):not(.forgot):not(.reset) {
     @extend %container;
     padding: 4rem 0;
+    margin-top: 60px;
 
     &.missions .missions__body, &.profiles .profiles__body, &.documents .documents__body, &.organizations .organizations__body {
       background-color: var(--color-background-lighter);
